fix: remove same-domain user api.model controller usage